# ai-assisted-osm-mapping-stats

./: .gitattributes  .gitignore  README.md  analysis.ipynb  downloaded-data-geojson\blds_testetstes.geojson  pyproject.toml  symbology-style.db  test_countries.geojson  testik.gpkg
MUNI logos/: muni-rgb.emf
data/: blds_world-states-2024.json  blds_world_states-2024-centroids.gpkg  cell_phones_per_100.csv  contribution_pattern_global.csv  contribution_pattern_per_country.csv  graticule.geojson  graticule.qmd  hdi_2021.json  mappers_per_country_per_month.csv  ne_110m_admin_0_countries.geojson  ne_110m_land.geojson  population.csv  regression_analysis_data.csv
downloaded-data/: blds_africa_states_18-23_ai.json  blds_continent_data_18-23_ai.json  blds_continents_data_18-23_ai.json  blds_northamerica_states_18-23_ai.json  continents_data_20-23_ai.json  roads_africa_states_18-23_ai.json  roads_continent_data_18-23_ai.json  roads_continents_data_18-23_ai.json  roads_europe_states_18-23_ai.json
downloaded-data-excel-files/: continents_data_20-23_ai.xlsx
downloaded-data-geojson/: geojson-hexagrid-kenya.geojson  roads_geojson-hexagrid-vietnam.geojson
downloaded-data-json/: blds_africa_states_18-23_ai.json  blds_sel-states.json  blds_world_states_18-23_ai.json  roads_asia_states_18-23_ai.json  roads_geojson-world-states.json
geojson-africa-states/: 0_Burundi.geojson  0_Ethiopia.geojson  10_Djibouti.geojson  11_Algeria.geojson  11_Namibia.geojson  12_Egypt.geojson  12_South Africa.geojson  13_Gabon.geojson  14_Eritrea.geojson  15_Ghana.geojson  15_Zambia.geojson  (+67 more)
(+40681 files in other folders)
